Fix T65750: Masking crash with Add Feather Vertex and Slide